2012-07-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (*_la_LIBADD): Need to link with $(LIBINTL) for
	gettext to work on platforms where it is not included in libc.

2012-07-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* readdir.c (dir_get_record): Need to set errno to 0 before calling
	readdir, since readdir sets errno only on failure, not on EOF.

2012-07-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* readdir.c (dir_get_record): If readdir fails, set errcode.  Otherwise,
	don't bother to set errcode.

2012-07-27         Arnold D. Robbins     <arnold@skeeve.com>

	* readdir.c (dir_take_control_of): Fix typo for case where
	we don't have fopendir (e.g., Mac OS X 10.5).

2012-07-26         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Extremely crude hack to get the value of
	ENABLE_NLS so that gettext will work in extensions.

	* readdir.c (dir_get_record): Call set_RT.
	(dir_can_take_file): Make parameter const.

	* testext.c (valrep2str): Add AWK_VALUE_COOKIE.

	* readdir.c: Add readdir_do_ftype function for systems without
	dirent->d_type.  Clean up buffer handling.

2012-07-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* readdir.c (dir_get_record): No need to set *errcode to 0.
	(dir_take_control_of): Remove some paranoia -- no need to test for
	NULL iobuf, and no need to check dir_can_take_file again.

2012-07-25         Arnold D. Robbins     <arnold@skeeve.com>

	* readdir.c: New file.
	* Makefile.am (readdir): New extension.

	* time.c: Fix all calls to update_ERRNO_string.

	* filefuncs.c, fnmatch.c, fork.c, ordchr.c, readfile.c, rwarray.c,
	time.c: Translate strings.

2012-07-20         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.3am, fnmatch.3am, ordchr.3am, readfile.3am:
	new files.

2012-07-16         Arnold D. Robbins     <arnold@skeeve.com>

	* fnmatch.c: Simplify flag table.
