@@ -1,3 +1,8 @@
+2012-07-29         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* readdir.c (dir_take_control_of): Print error message and
+	set ERRNO if failure. Adjust count of max digits.
+
 2012-07-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* Makefile.am (*_la_LIBADD): Need to link with $(LIBINTL) for
